--- a/GameOn/app/src/main/res/layout/main.xml
+++ b/GameOn/app/src/main/res/layout/main.xml
@@ -226,7 +226,7 @@
         android:layout_marginEnd="8dp" />
 
     <ImageButton
-        android:id="@+id/main_leagueMenu"
+        android:id="@+id/winlose_leagueMenu"
         android:layout_width="62dp"
         android:layout_height="94dp"
         android:adjustViewBounds="true"
