--- a/GameOn/app/src/main/res/layout/splashh.xml
+++ b/GameOn/app/src/main/res/layout/splashh.xml
@@ -9,14 +9,15 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.dorma.gameon.MainActivity">
+    tools:context="com.example.dorma.gameon.MainActivity"
+    android:background="@drawable/background">
 
     <ImageView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:srcCompat="@drawable/logo"
         android:id="@+id/gamelogo"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="41dp" />
+        android:layout_marginTop="0dp" />
 </RelativeLayout>
